content/v1.4.5/en/api/campaign/AllianceCampaignBehavior.md
---
title: "AllianceCampaignBehavior"
description: "Auto-generated class reference for AllianceCampaignBehavior."
---
# AllianceCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class AllianceCampaignBehavior : CampaignBehaviorBase, IAllianceCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/AllianceCampaignBehavior.cs`

## Overview

`AllianceCampaignBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsAlliance logic.

```csharp
// Static call; no instance required
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsCallToWarAgreement logic.

```csharp
// Static call; no instance required
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsCallToWarAgreement(o, collectedObjects);
```

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** **Purpose:** Registers events with the current system so it can later be observed or dispatched.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** **Purpose:** Synchronizes data across the relevant contexts or systems.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.SyncData(dataStore);
```

### OnAllianceOfferedToPlayer
`public void OnAllianceOfferedToPlayer(Kingdom offeringKingdom)`

**Purpose:** **Purpose:** Invoked when the alliance offered to player event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnAllianceOfferedToPlayer(offeringKingdom);
```

### OnAllianceOfferedToPlayerKingdom
`public void OnAllianceOfferedToPlayerKingdom(Kingdom offeringKingdom)`

**Purpose:** **Purpose:** Invoked when the alliance offered to player kingdom event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnAllianceOfferedToPlayerKingdom(offeringKingdom);
```

### OnCallToWarAgreementProposedToPlayer
`public void OnCallToWarAgreementProposedToPlayer(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed to player event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedToPlayer(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedToPlayerKingdom
`public void OnCallToWarAgreementProposedToPlayerKingdom(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed to player kingdom event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedToPlayerKingdom(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedByPlayer
`public void OnCallToWarAgreementProposedByPlayer(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed by player event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedByPlayer(proposedKingdom, kingdomToCallToWarAgainst);
```

### GetAllianceEndDate
`public CampaignTime GetAllianceEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Reads and returns the alliance end date value held by the this instance.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.GetAllianceEndDate(kingdom1, kingdom2);
```

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed by player kingdom event is raised.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedByPlayerKingdom(proposedKingdom, kingdomToCallToWarAgainst);
```

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Determines whether the this instance is in the ally with kingdom state or condition.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAllyWithKingdom(kingdom1, kingdom2);
```

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**Purpose:** **Purpose:** Starts the alliance flow or state machine.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartAlliance(proposerKingdom, receiverKingdom);
```

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Executes the EndAlliance logic.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndAlliance(kingdom1, kingdom2);
```

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Determines whether the this instance already holds called to war.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.HasCalledToWar(callingKingdom, calledKingdom);
```

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, out Kingdom callingKingdom)`

**Purpose:** **Purpose:** Determines whether the this instance is in the at war by call to war agreement state or condition.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAtWarByCallToWarAgreement(calledKingdom, kingdomToCallToWarAgainst, callingKingdom);
```

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**Purpose:** **Purpose:** Starts the call to war agreement flow or state machine.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst, 0, false);
```

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Executes the EndCallToWarAgreement logic.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst);
```

### DenyCallToWarAgreement
`public void DenyCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Executes the DenyCallToWarAgreement logic.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.DenyCallToWarAgreement(callingKingdom, calledKingdom);
```

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Reads and returns the kingdoms to call to war against value held by the this instance.

```csharp
// Obtain an instance of AllianceCampaignBehavior from the subsystem API first
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.GetKingdomsToCallToWarAgainst(callingKingdom, calledKingdom);
```

## Usage Example

```csharp
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

## See Also

- [Area Index](../)